k8s/aks-nestjs-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-nestjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-nestjs
  template:
    metadata:
      labels:
        app: aks-helloworld-nestjs
    spec:
      containers:
        - name: aks-helloworld-nestjs
          image: docker.io/filipefigueredo/nestjs-k8s-container:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-nestjs
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: aks-helloworld-nestjs
